Add a test on a single source file